# interval-trainer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/note_png_maker/: C4.ly
assets/sheet_music_maker/: Alteration.py  Clef.py  Makefile  Note.py  generate_pdf.sh  instructions.json  make_note.sh  maker.py  maker.sh  sheet_music_instructions.json  sheet_music_maker.sh
assets/sheet_music_maker/lilypond_file_generator/: lilypond_file_generator.py
assets/sheet_music_maker/template/: template.ly
src/: frequencies.rs  interval.rs  interval_trainer.rs  intervals.rs  listen.rs  main.rs  note_range.rs  notes.rs  pitch_detector.rs  play_wav.rs  render.rs  simple_note.rs  synth.rs  wavetables.rs
src/assets/: make_png.sh  svg_to_png.sh
src/audio/: listen.rs  mod.rs  play_sample.rs  play_wav.rs
src/audio/synth/: mod.rs  synth.rs
src/music/: interval.rs  mod.rs  note.rs  note_range.rs  simple_note.rs
src/render/: mod.rs  render.rs
src/synth/: synth.rs
tools/sheet_music_maker/: generate_pdf.sh
tools/sheet_music_maker/lilypond_file_generator/: lilypond_file_generator.py
tools/sheet_music_maker/lilypond_generator/: Cargo.toml
tools/sheet_music_maker/lilypond_generator/src/: main.rs  note_repr.rs
tools/sheet_music_maker/sheet_music/: A3_treble.ly  A4_treble.ly  C4_treble.ly  Cb4_treble.ly  Cbb4_treble.ly  Cs4_treble.ly  Css4_treble.ly  D4_treble.ly  E5_treble.ly  empty.ly
