[package]
name = "interval_trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
int-enum = "1.1"
color-eyre = "0.6"
rodio = "0.14.0"
pitch-detection = "0.3.0"
cpal = "0.15.3"
image = "0.25.1"
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
