[package]
name = "interval_trainer"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
int-enum = "1.1"
color-eyre = "0.6"
rodio = "0.14.0"
pitch-detection = "0.3.0"
cpal = "0.15.3"
eframe = "0.27.2"
env_logger = "0.11.3"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for
